// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enums enum Environment 1`] = `
Object {
  "ALPHA": "alpha",
  "BETA": "beta",
  "CI": "ci",
  "DEVELOPMENT": "development",
  "MOCK": "mock",
  "PRODUCTION": "production",
  "QA": "qa",
  "STAGE": "stage",
  "UAT": "uat",
}
`;

exports[`Enums enum Path 1`] = `
Object {
  "AUTH": "/auth",
  "INDEX": "/",
}
`;

exports[`Enums export default 1`] = `
Object {
  "Environment": Object {
    "ALPHA": "alpha",
    "BETA": "beta",
    "CI": "ci",
    "DEVELOPMENT": "development",
    "MOCK": "mock",
    "PRODUCTION": "production",
    "QA": "qa",
    "STAGE": "stage",
    "UAT": "uat",
  },
  "Path": Object {
    "AUTH": "/auth",
    "INDEX": "/",
  },
}
`;
